big refactoring update  * every riddle has now SafariAnimal as input